fix projects gap

--- a/src/pages/startups/Startups.scss
+++ b/src/pages/startups/Startups.scss
@@ -627,7 +627,7 @@ $nav-top: 2px;
 		max-width: 100%;
 		width: fit-content;
 		border-radius: 5px;
-		line-height: 1.17;
+		line-height: 1.2;
 		padding: 4px 8px;
 		margin: 3px;
 		color: $link-color;
@@ -635,6 +635,10 @@ $nav-top: 2px;
 		box-shadow: $link-shadow;
 		transition: 0.25s;
 		overflow: hidden;
+
+		@include tablet {
+			line-height: 1.3;
+		}
 
 		@media (hover: hover) and (pointer: fine) {
 			&:hover {
@@ -644,10 +648,6 @@ $nav-top: 2px;
 
 		&:active {
 			@include hover-text-link;
-		}
-
-		@include tablet {
-			line-height: 1.3;
 		}
 
 		// icon for links
